fix - z-index header and area form on vendor list

--- a/src/Volo/FrontendBundle/Resources/public/css/pages/restaurants.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/pages/restaurants.scss
@@ -27,7 +27,7 @@
   top: 10px;
   left: 0;
   right: 0;
-  z-index: 0;
+  z-index: 1;
 }
 
 .restaurants__tool-box.restaurants__tool-box-sticking {
@@ -36,7 +36,7 @@
   z-index: 2;
   @include respond-from("screen-md") {
     position: absolute;
-    z-index: 0;
+    z-index: 1;
   }
 }
 
@@ -149,6 +149,7 @@
 }
 
 .restaurants__location__input {
+  font-size: 0.875em;
   @include centerTextVerticallyByHeight(30px);
   margin-top: 0;
 }
